// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Component > renders fill variant styles 1`] = `
.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
  border-radius: 0.8125rem;
  padding: 1.31rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:disabled {
  background-color: var(--color-gray-400)!important;
  color: #ffffff;
}

.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
  border-radius: 0.8125rem;
  padding: 1.31rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:disabled {
  background-color: var(--color-gray-400)!important;
  color: #ffffff;
}

<button
  aria-disabled="false"
  class="emotion-0"
  style="background-color: rgb(53, 99, 222); color: rgb(255, 255, 255); --color-primary-600: #3563de; --color-gray-400: #2a292e;"
>
  Notr Button Filled
</button>
`;

exports[`Button Component > renders outline variant styles 1`] = `
.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
  border: 1px solid var(--color-primary-600);
  border-radius: 0.8125rem;
  padding: 1.31rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:disabled {
  border-color: var(--color-gray-400);
  color: var(--color-gray-400)!important;
}

.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
  border: 1px solid var(--color-primary-600);
  border-radius: 0.8125rem;
  padding: 1.31rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:disabled {
  border-color: var(--color-gray-400);
  color: var(--color-gray-400)!important;
}

.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
  border: 1px solid var(--color-primary-600);
  border-radius: 0.8125rem;
  padding: 1.31rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:disabled {
  border-color: var(--color-gray-400);
  color: var(--color-gray-400)!important;
}

<button
  aria-disabled="false"
  class="emotion-0"
  style="color: rgb(53, 99, 222); --color-primary-600: #3563de; --color-gray-400: #2a292e;"
>
  Notr Button Outline
</button>
`;

exports[`Button Component > renders text variant styles 1`] = `
.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:disabled {
  color: var(--color-gray-400)!important;
}

.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:disabled {
  color: var(--color-gray-400)!important;
}

.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:disabled {
  color: var(--color-gray-400)!important;
}

.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:disabled {
  color: var(--color-gray-400)!important;
}

<button
  aria-disabled="false"
  class="emotion-0"
  style="color: rgb(53, 99, 222); --color-primary-600: #3563de; --color-gray-400: #2a292e;"
>
  Notr Button Text
</button>
`;

exports[`Button Component > renders with default props and styles 1`] = `
.emotion-0 {
  outline: none;
  border: none;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.125rem;
  border-radius: 0.8125rem;
  padding: 1.31rem;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  font-weight: 500;
  cursor: not-allowed;
}

.emotion-0:disabled {
  background-color: var(--color-gray-400)!important;
  color: #ffffff;
}

<button
  aria-disabled="false"
  class="emotion-0"
  style="background-color: rgb(53, 99, 222); color: rgb(255, 255, 255); --color-primary-600: #3563de; --color-gray-400: #2a292e;"
>
  Notr Button
</button>
`;
